; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/freetype/src/autofit/extr_afshaper.c_af_shaper_get_cluster.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/freetype/src/autofit/extr_afshaper.c_af_shaper_get_cluster.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @af_shaper_get_cluster(i8* %0, %struct.TYPE_5__* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %9, align 4
  store i64 0, i64* %11, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = bitcast i8* %18 to i64*
  store i64* %19, i64** %12, align 8
  br label %20

20:                                               ; preds = %25, %4
  %21 = load i8*, i8** %5, align 8
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 32
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = load i8*, i8** %5, align 8
  %27 = getelementptr inbounds i8, i8* %26, i32 1
  store i8* %27, i8** %5, align 8
  br label %20

28:                                               ; preds = %20
  %29 = load i64, i64* %10, align 8
  %30 = load i8*, i8** %5, align 8
  %31 = call i32 @GET_UTF8_CHAR(i64 %29, i8* %30)
  br label %32

32:                                               ; preds = %45, %28
  %33 = load i8*, i8** %5, align 8
  %34 = load i8, i8* %33, align 1
  %35 = sext i8 %34 to i32
  %36 = icmp eq i32 %35, 32
  br i1 %36, label %42, label %37

37:                                               ; preds = %32
  %38 = load i8*, i8** %5, align 8
  %39 = load i8, i8* %38, align 1
  %40 = sext i8 %39 to i32
  %41 = icmp eq i32 %40, 0
  br label %42

42:                                               ; preds = %37, %32
  %43 = phi i1 [ true, %32 ], [ %41, %37 ]
  %44 = xor i1 %43, true
  br i1 %44, label %45, label %49

45:                                               ; preds = %42
  %46 = load i64, i64* %11, align 8
  %47 = load i8*, i8** %5, align 8
  %48 = call i32 @GET_UTF8_CHAR(i64 %46, i8* %47)
  br label %32

49:                                               ; preds = %42
  %50 = load i64, i64* %11, align 8
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %55

52:                                               ; preds = %49
  %53 = load i64*, i64** %12, align 8
  store i64 0, i64* %53, align 8
  %54 = load i32*, i32** %8, align 8
  store i32 0, i32* %54, align 4
  br label %61

55:                                               ; preds = %49
  %56 = load i32, i32* %9, align 4
  %57 = load i64, i64* %10, align 8
  %58 = call i64 @FT_Get_Char_Index(i32 %56, i64 %57)
  %59 = load i64*, i64** %12, align 8
  store i64 %58, i64* %59, align 8
  %60 = load i32*, i32** %8, align 8
  store i32 1, i32* %60, align 4
  br label %61

61:                                               ; preds = %55, %52
  %62 = load i8*, i8** %5, align 8
  ret i8* %62
}

declare dso_local i32 @GET_UTF8_CHAR(i64, i8*) #1

declare dso_local i64 @FT_Get_Char_Index(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
